--- a/package.json
+++ b/package.json
@@ -1,20 +1,39 @@
 {
-  "name":"mesto",
-  "version":"1.0.0",
-  "description":"**Место. Третий проект для Яндекс.Практикум**",
-  "main":"index.js",
-  "scripts":{"build":"webpack --mode production",
-    "dev":"webpack serve",
-    "clean": "rd /s /q dist"},
-    "repository":{"type":"git","url":"git+https://github.com/juliastrukova/mesto.git"},
-    "author":"",
-    "license":"ISC",
-    "bugs":{
-      "url":"https://github.com/juliastrukova/mesto/issues"},
-    "homepage":"https://github.com/juliastrukova/mesto#readme",
-    "devDependencies":{
-      "css-loader":"^6.7.1",
-      "mini-css-extract-plugin":"^2.6.0",
-      "webpack":"^5.72.0",
-      "webpack-cli":"^4.9.2"}
-    }
+  "name": "mesto",
+  "version": "1.0.0",
+  "description": "**Место. Третий проект для Яндекс.Практикум**",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack serve",
+    "clean": "rd /s /q dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juliastrukova/mesto.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/juliastrukova/mesto/issues"
+  },
+  "homepage": "https://github.com/juliastrukova/mesto#readme",
+  "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss-loader": "^6.2.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "core-js": "^3.22.4"
+  },
+  "keywords": []
+}
