--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   "homepage": "https://github.com/juliastrukova/mesto#readme",
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "autoprefixer": "^10.4.7",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "cssnano": "^5.1.7",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^6.2.1",
@@ -33,7 +40,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "core-js": "^3.22.4"
-  },
-  "keywords": []
+  }
 }
